--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "jest",
     "start": "node server.js",
-    "dev": "webpack-dev-server -d --open"
+    "build": "webpack"
   },
   "author": "",
   "license": "ISC",
