--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "jest",
     "start": "node server.js",
-    "build": "webpack"
+    "build": "webpack",
+    "dev": "webpack && npm start"
   },
   "author": "",
   "license": "ISC",
